--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="utf-8">
-<head>
 <meta charset="utf-8">
+<head>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-<div> 
+<div>
 </div>
 	
 
