--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
+<html lang="no-NB">
 <meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
+<script src="javascript.js"></script>
+
+
+
 <head>
-    <link rel="stylesheet" href="style.css">
+    <title>Felix test</title>
+    <h1 style="color:darkred";>Flagg oppgave</h1>
 </head>
 
 <body>
-
-<div>
+<div style="color:darkblue; font-family: 'Arial Black';">
+<p>Norge:</p>
 </div>
-	
+
+<p style="width: 100%; height: 33%; background-color: darkred;"></p>
+<p style="width: 100%; height: 33%; background-color: blue;"></p>
+<p style="width: 100%; height: 33%; background-color: white;"></p>
 
 
 </body>
-
 </html>
