--- a/index.html
+++ b/index.html
@@ -2,23 +2,28 @@
 <html lang="no-NB">
 <meta charset="utf-8">
 <link rel="stylesheet" href="style.css">
-<script src="javascript.js"></script>
+<link rel="script.js">
 
 
 
 <head>
     <title>Felix test</title>
-    <h1 style="color:darkred";>Flagg oppgave</h1>
+
 </head>
 
 <body>
+<header>
+<h1 style="color:darkred;">Flagg oppgave</h1>
 <div style="color:darkblue; font-family: 'Arial Black';">
 <p>Norge:</p>
-</div>
+</div></header>
 
-<p style="width: 100%; height: 33%; background-color: darkred;"></p>
-<p style="width: 100%; height: 33%; background-color: blue;"></p>
-<p style="width: 100%; height: 33%; background-color: white;"></p>
+
+    <div style="width: 20%; height: 25%; background-color: white; margin:auto;">
+        <p style="background-color: white; margin: 0%; width: 100%; height: 33%;"></p >
+        <p style="background-color: blue; margin: 0%; width: 100%; height: 33%;"></p>
+        <p style="background-color: red; margin: 0%; width: 100%; height: 33%;"></p>
+    </div>
 
 
 </body>
