--- a/testing.html
+++ b/testing.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TITTEL</title>
     <style>
-     <!-- Her kan stil defineres (vi skal bruke Cascading Style Sheets) -->
+     /*<!-- Her kan stil defineres (vi skal bruke Cascading Style Sheets) -->*/
     </style>
  <!--
 
@@ -22,6 +22,11 @@
 </head>
 <body>
   <!-- Her (i body-elementet) skrives alt innhold, som påvirker tegning på skjermen. -->
+    <form>
+        <input type="text" name="navn"/>
+        
+    </form>
+
 
   <script>
    // Se https://html.spec.whatwg.org/multipage/scripting.html#restrictions-for-contents-of-script-elements
