--- a/testing.html
+++ b/testing.html
@@ -24,9 +24,9 @@
   <!-- Her (i body-elementet) skrives alt innhold, som påvirker tegning på skjermen. -->
     <form>
         <label for="navn">Navn</label>
-        <input type="text" name="navn" required/>
+        <input type="text" name="navn" required/><br><br>
         <label for="epost">E-post</label>
-        <input type="email" name="epost" required/>
+        <input type="epost" name="epost" required/>
     </form>
 
 
